# onedse

./: .gitignore  .gitmodules  README.md  make_and_run.sh
cpp/: CMakeLists.txt  compile_commands.json
cpp/dependencies/: get.sh
cpp/dependencies/alglib/: Makefile
cpp/main/core/: CMakeLists.txt
cpp/main/core/discretization/: basis.cpp  basis.h  orthogonal_chebyshev.h  orthogonal_hermite.h  orthogonal_legendre.h  orthogonal_polynomial.cpp  orthogonal_polynomial.h  scaled_basis.cpp  scaled_basis.h
cpp/main/core/lua/: expose.h  system.cpp  system.h
cpp/main/core/map/: map.h  map_density_operator.cpp  map_density_operator.h  map_wavefunction.cpp  map_wavefunction.h
cpp/main/core/propagation/: diagonal_propagator.h  propagator.h  runge_kutta.h
cpp/main/core/state/: density_operator.cpp  density_operator.h  state.h  wave_function.cpp  wave_function.h  wigner_function.cpp  wigner_function.h
cpp/main/core/utility/: fft.cpp  fft.h
cpp/main/script/: CMakeLists.txt  main.cpp
cpp/main/server/: CMakeLists.txt  main.cpp
cpp/main/server/session/: session.cpp  session.h
cpp/test/: CMakeLists.txt
cpp/test/core/discretization/: basis.cpp  orthogonal_chebyshev.cpp  orthogonal_hermite.cpp  orthogonal_legendre.cpp  scaled_basis.cpp
cpp/test/core/lua/: expose.cpp
cpp/test/core/map/: map_density_operator.cpp
cpp/test/core/propagation/: diagonal_propagator.cpp  runge_kutta.cpp
cpp/test/core/state/: density_operator.cpp  wave_function.cpp  wigner_function.cpp
cpp/test/core/utility/: fft.cpp
js/: .eslintrc.js  Makefile  index.html  package-lock.json  package.json  webpack.config.js
js/src/: app.js  index.js  luaEditor.js  message.js  server.js  wavefunctionPlot.js
lua/: decoherence.lua  example0.lua  example1.lua  example2.lua  liouville_neumann.lua  schroedinger.lua  session0.lua  session1.lua  simple_decoherence.lua
python/: plot.py
server/: CMakeLists.txt  compile_commands.json  main.cpp  main_test.cpp  make.sh
server/cmake/Modules/: FindAlglib.cmake  FindFFTW.cmake
server/dependencies/: download.sh  get.sh
server/dependencies/alglib/: Makefile
server/main/: main.cpp
server/main/wigner_web/: CMakeLists.txt
server/main/wigner_web/discretization/: basis.cpp  basis.h  orthogonal_chebyshev.h  orthogonal_hermite.h  orthogonal_legendre.h  orthogonal_polynomial.cpp  orthogonal_polynomial.h  scaled_basis.cpp  scaled_basis.h
server/main/wigner_web/map/: map.h  map_density_operator.cpp  map_density_operator.h  map_wavefunction.cpp  map_wavefunction.h  operator.h  operator_wavefunction.cpp  operator_wavefunction.h
server/main/wigner_web/propagation/: diagonal_propagator.cpp  diagonal_propagator.h  propagator.h  runge_kutta.h
server/main/wigner_web/server/: session.cpp  session.h
server/main/wigner_web/state/: density_operator.cpp  density_operator.h  state.h  wave_function.cpp  wave_function.h  wigner_function.cpp  wigner_function.h
server/main/wigner_web/system/: system.cpp  system.h
server/main/wigner_web/utility/: fft.cpp  fft.h  files.cpp  files.h  lua_expose.h  lua_register_complex.h
server/test/wigner_web/discretization/: basis.cpp  orthogonal_chebyshev.cpp  orthogonal_hermite.cpp  orthogonal_legendre.cpp  scaled_basis.cpp
server/test/wigner_web/map/: map_density_operator.cpp
server/test/wigner_web/propagation/: diagonal_propagator.cpp  runge_kutta.cpp
server/test/wigner_web/state/: density_operator.cpp  wave_function.cpp  wigner_function.cpp
server/test/wigner_web/utility/: fft.cpp  files.cpp  lua_expose.cpp  lua_register_complex.cpp
server/wigner_web/: CMakeLists.txt  server.cpp  server.h
server/wigner_web/discretization/: basis.cpp  basis.h  orthogonal_hermite.h  orthogonal_polynomial.cpp  orthogonal_polynomial.h  scaled_orthogonal_chebyshev.cpp  scaled_orthogonal_chebyshev.h
server/wigner_web/map/: operator_wavefunction.cpp  operator_wavefunction.h
server/wigner_web/propagation/: propagator.h  runge_kutta.h
server/wigner_web/server/: server.cpp  server.h  session.cpp  session.h
server/wigner_web/state/: density_operator.cpp  density_operator.h  state.h  wave_function.cpp  wave_function.h  wigner_function.cpp  wigner_function.h
server/wigner_web/system/: system.cpp  system.h
server/wigner_web/utility/: fft.h
webapp/: .babelrc  index.html  package-lock.json  package.json  webpack.config.js
webapp/src/: app.js  index.js  luaEditor.js  plot.js  server.js  wavefunctionPlot.js  wignerPlot.js
